[package]
name = "ifconnect"
description = "A mid-level wrapper for the Infinite Connect v2 API."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.68"
serde = { version = "1.0.130", features = ["derive"] }
futures = "0.3.17"
tokio = { version = "1.12.0", features = ["full"] }
queues = "1.1.0"